--- a/src/main/resources/templates/weather-main.mustache
+++ b/src/main/resources/templates/weather-main.mustache
@@ -7,43 +7,19 @@
             <!-- 검색 영역 -->
             <div class="columns">
                 <div class="column">
-                    날짜:
                     <div class="tui-datepicker-input tui-datetime-input tui-has-focus">
-                        <input type="text" id="datepicker-input" aria-label="Date-Time">
+                        <input type="text" id="datepicker-start" aria-label="Date-Time">
                         <span class="tui-ico-date"></span>
                     </div>
                     <div id="wrapper" style="margin-top: -1px;"></div>
                 </div>
                 <div class="column">
-                    시간:
-                    <div class="select is-small">
-                        <select id="time">
-                            <option value="0000">00:00</option>
-                            <option value="0100">01:00</option>
-                            <option value="0200">02:00</option>
-                            <option value="0300">03:00</option>
-                            <option value="0400">04:00</option>
-                            <option value="0500">05:00</option>
-                            <option value="0600">06:00</option>
-                            <option value="0700">07:00</option>
-                            <option value="0800">08:00</option>
-                            <option value="0900">09:00</option>
-                            <option value="1000">10:00</option>
-                            <option value="1100">11:00</option>
-                            <option value="1200">12:00</option>
-                            <option value="1300">13:00</option>
-                            <option value="1400">14:00</option>
-                            <option value="1500">15:00</option>
-                            <option value="1600">16:00</option>
-                            <option value="1700">17:00</option>
-                            <option value="1800">18:00</option>
-                            <option value="1900">19:00</option>
-                            <option value="2000">20:00</option>
-                            <option value="2100">21:00</option>
-                            <option value="2200">22:00</option>
-                            <option value="2300">23:00</option>
-                        </select>
+                    ~
+                    <div class="tui-datepicker-input tui-datetime-input tui-has-focus">
+                        <input type="text" id="datepicker-end" aria-label="Date-Time">
+                        <span class="tui-ico-date"></span>
                     </div>
+                    <div id="wrapper" style="margin-top: -1px;"></div>
                 </div>
                 <div class="column">
                     장소:
@@ -86,6 +62,19 @@
                 </thead>
                 <tbody id="weather-table"></tbody>
             </table>
+
+            <!-- Pagination 영역 -->
+            <nav class="pagination is-centered" role="navigation" aria-label="pagination">
+                <a class="pagination-previous">이전</a>
+                <a class="pagination-next">다음</a>
+                <ul class="pagination-list">
+                    <li><a class="pagination-link is-current" aria-label="Goto page" data-page-number="1">1</a></li>
+                    <li><a class="pagination-link" aria-label="Goto page" data-page-number="2">2</a></li>
+                    <li><a class="pagination-link" aria-label="Goto page" data-page-number="3">3</a></li>
+                    <li><a class="pagination-link" aria-label="Goto page" data-page-number="4">4</a></li>
+                    <li><a class="pagination-link" aria-label="Goto page" data-page-number="5">5</a></li>
+                </ul>
+            </nav>
         </div>
     </div>
 </section>
